Customer terms can now be filtered on a list of terms types. (#118)
